--- a/cook-n-share/index.html
+++ b/cook-n-share/index.html
@@ -5,18 +5,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,300,600,800' rel='stylesheet' type='text/css'>
 		<link href="style/jquery-ui.css" rel="stylesheet" type="text/css">
 		<link href="style/evol.colorpicker.css" rel="stylesheet" type="text/css">
 
 		<style>
 			body {
-				font-family: Monospace;
+				font-family: 'Open Sans', sans-serif;
 				background-color: #f0f0f0;
 				margin: 0px;
 				overflow: hidden;
 			}
-
-			#oldie { background-color: #ddd !important }
 
 			#instructions {
 				position: absolute;
@@ -56,7 +55,7 @@
 			}
 		</style>
 	</head>
-	<body oncontextmenu="return false;">
+	<body>
 		<div id="content">
 			<div id="instructions">
 				instructions<br><strong>click</strong>: add voxel, <strong>shift + click</strong>: remove voxel
