--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -14,6 +14,7 @@
 </div>
 
 <script src="/lib/jquery-3.0.0.min.js"></script>
+<script src="/js/creature.js"></script>
 <script src="/js/index.js"></script>
 </body>
 </html>
