Basic style on the moves.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -9,8 +9,9 @@
 <body>
 <div id="output"></div>
 <div id="controls">
-	<a href="">Fire</a>
-	<a href="">Water</a>
+	<div class="move">Fire</div>
+	<div class="move">Water</div>
+	<div class="move">Earth</div>
 </div>
 
 <script src="/lib/jquery-3.0.0.min.js"></script>
