--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -5,17 +5,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="/lib/normalize.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
+
+	<script src="/lib/jquery-3.0.0.min.js" defer></script>
+	<script src="/js/creature.js" defer></script>
+	<script src="/js/index.js" defer></script>
 </head>
 <body>
 <div id="output"></div>
-<div id="controls">
+<div id="controls" class="no-select">
 	<div class="move">Fire</div>
 	<div class="move">Water</div>
 	<div class="move">Earth</div>
 </div>
-
-<script src="/lib/jquery-3.0.0.min.js"></script>
-<script src="/js/creature.js"></script>
-<script src="/js/index.js"></script>
 </body>
 </html>
