Adding a viewport tag.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<link href="data:;base64,iVBORw0KGgo=" rel="icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link href="/lib/normalize.css" rel="stylesheet">
