Hardcoded healthbars added.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -13,6 +13,18 @@
 	<script src="/js/index.js" defer></script>
 </head>
 <body>
+<div id="battle">
+	<div class="player health">
+		<div class="health-bar" style="width: 75%;">
+			<div class="health-text">120</div>
+		</div>
+	</div>
+	<div class="enemy health">
+		<div class="health-bar" style="width: 75%;">
+			<div class="health-text">120</div>
+		</div>
+	</div>
+</div>
 <div id="output"></div>
 <div id="controls" class="no-select">
 	<div class="move">Fire</div>
