--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -15,13 +15,13 @@
 <body>
 <div id="battle">
 	<div class="player health">
-		<div class="health-bar" style="width: 75%;">
-			<div class="health-text">120</div>
+		<div class="health-bar">
+			<div class="health-text"></div>
 		</div>
 	</div>
 	<div class="enemy health">
-		<div class="health-bar" style="width: 75%;">
-			<div class="health-text">120</div>
+		<div class="health-bar">
+			<div class="health-text"></div>
 		</div>
 	</div>
 </div>
