Adding names to the page.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -14,14 +14,20 @@
 </head>
 <body>
 <div id="battle">
-	<div class="player health">
-		<div class="health-bar">
-			<div class="health-text"></div>
+	<div class="player">
+		<div class="name"></div>
+		<div class="health">
+			<div class="health-bar">
+				<div class="health-text"></div>
+			</div>
 		</div>
 	</div>
-	<div class="enemy health">
-		<div class="health-bar">
-			<div class="health-text"></div>
+	<div class="enemy">
+		<div class="name"></div>
+		<div class="health">
+			<div class="health-bar">
+				<div class="health-text"></div>
+			</div>
 		</div>
 	</div>
 </div>
