Showing level but not changing it.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -15,7 +15,10 @@
 <body>
 <div id="battle">
 	<div class="player">
-		<div class="name"></div>
+		<div>
+			<span class="name"></span>
+			<span class="level"></span>
+		</div>
 		<div class="health">
 			<div class="health-bar">
 				<div class="health-text"></div>
@@ -23,7 +26,10 @@
 		</div>
 	</div>
 	<div class="enemy">
-		<div class="name"></div>
+		<div>
+			<span class="name"></span>
+			<span class="level"></span>
+		</div>
 		<div class="health">
 			<div class="health-bar">
 				<div class="health-text"></div>
