Playing around with zones. Fixed an update bug with exp.

--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -39,11 +39,16 @@
 		</div>
 	</div>
 </div>
+<div id="zones" class="light-primary-text no-select">
+	<div class="zone button">1</div>
+	<div class="zone button">2</div>
+	<div class="zone button">3</div>
+</div>
 <div id="output"></div>
 <div id="controls" class="light-primary-text no-select">
-	<div class="move">Fire</div>
-	<div class="move">Water</div>
-	<div class="move">Earth</div>
+	<div class="move button">Fire</div>
+	<div class="move button">Water</div>
+	<div class="move button">Earth</div>
 </div>
 </body>
 </html>
