--- a/mini-0005/index.html
+++ b/mini-0005/index.html
@@ -10,6 +10,7 @@
 
 	<script src="/lib/jquery-3.0.0.min.js" defer></script>
 	<script src="/js/creature.js" defer></script>
+	<script src="/js/zones.js" defer></script>
 	<script src="/js/index.js" defer></script>
 </head>
 <body class="dark-primary-text">
@@ -39,11 +40,7 @@
 		</div>
 	</div>
 </div>
-<div id="zones" class="light-primary-text no-select">
-	<div class="zone button">1</div>
-	<div class="zone button">2</div>
-	<div class="zone button">3</div>
-</div>
+<div id="zones" class="light-primary-text no-select"></div>
 <div id="output"></div>
 <div id="controls" class="light-primary-text no-select">
 	<div class="move button">Fire</div>
